Adding restitution